k8s/stg/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: sample-app-stg
  namespace: stg  

spec:
  replicas: 1

  selector:
    matchLabels:
      app: sample-app-stg

  template:
    metadata:
      labels:
        app: sample-app-stg

    spec:
      containers:
      - name: sample-app-stg
        image: ghcr.io/github1001/devops-lab:stg
        imagePullPolicy: Always

        ports:
        - containerPort: 3000
