k8s/stg/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: sample-app-stg
  namespace: stg  

spec:
  selector:
    app: sample-app-stg

  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 31012

  type: NodePort
