k8s/stg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: sample-app-stg
  namespace: stg

spec:
  ingressClassName: traefik

  rules:
  - host: stg.sample-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-app-stg
            port:
              number: 3000
